<resources>
    <string name="app_name">Atividade03CalculaPercursoETempoComGPS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="give_gps_permission_button">Give GPS permission</string>
    <string name="turn_gps_on_button">Turn GPS on</string>
    <string name="turn_gps_off_button">Turn GPS off</string>
    <string name="start_route">Start route</string>
    <string name="end_route">End route</string>
    <string name="traveled_distance">Traveled distance:</string>
    <string name="traveled_distance_value">0</string>
    <string name="time_passed">Time passed:</string>
    <string name="what_do_you_want_to_find">What do you want to find?</string>
    <string name="impossible_to_continue_permission_needed">Impossible to continue! Permission needed</string>
    <string name="permission_already_granted">Permission already granted!</string>
    <string name="gps_already_turned_off">Gps already turned off!</string>
    <string name="impossible_to_continue_turn_on_the_gps">Impossible to continue! Turn on the GPS</string>
</resources>
