<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/gpsPermissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/give_gps_permission_button"
        android:background="@color/colorButton"
        android:onClick="giveGpsPermission"/>


    <Button
        android:id="@+id/gpsOnButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:text="@string/turn_gps_on_button"
        android:onClick="turnGpsOn"/>

    <Button
        android:id="@+id/gpsOffButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/turn_gps_off_button"
        android:background="@color/colorButton"
        android:onClick="turnGpsOff"/>

    <Button
        android:id="@+id/gpsStartRouteButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/start_route"
        android:background="@color/colorButton"
        android:onClick="startRoute"/>

    <Button
        android:id="@+id/gpsEndRouteButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/end_route"
        android:background="@color/colorButton"
        android:onClick="endRoute"/>

    <TextView
        android:id="@+id/traveledDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/traveled_distance" />


    <TextView
        android:id="@+id/traveledDistanceValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:text="@string/traveled_distance_value"
        android:background="@color/colorButton"/>

    <TextView
        android:id="@+id/timePassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/timePassed" />

    <Chronometer
        android:id="@+id/timePassedChronometer"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="start"
        android:inputType="text"
        android:layout_columnSpan="2"
        android:hint="@string/what_do_you_want_to_find"

        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/what_do_you_want_to_find" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/colorButton"
        app:fabSize="auto"
        app:srcCompat="@android:drawable/ic_menu_search"
        />


</GridLayout>